Changes after KPresenter 1.3
============================
Fixes:
- Fixed possible crash in presentation mode if not all slides are shown
- Fixed take tmp objects for redrawing in effect from the correct page

Changes after KPresenter 1.3 RC1
================================
- during a presentation variables on the sticky page were not updated (#67515)


Changes after KPresenter 1.3 beta 4
===================================
Fixes:
- Fixed When resizing a frame it does not snap to the grid (#63032)
- Fixed after resize/undo size of object is not the same
- Fixed after move/undo position of object is not the same
- Fixed resizing of poly line objects
- Fixed after reload of some objects moved up a little bit
- Fixed moving with key left used y grid
- Fixed header/footer moved in undo

Changes after KPresenter 1.3 beta 3
===================================
Fixes:
- Fixed cursor not blinking in some cases
- Fixed "blinking cursor erases formatting characters" bug
- "Adjust object to contents" works as intended now
- Purpose of the 'Notebar' is unknown (#63037)
- kpresenter crashed when I tried to insert the variable
  "section title" (#61735)
- large footer from kpresenter 1.2.1 will crash kpresenter
  (#61449)
- embedded spreadsheet (table button) appears at wrong size
  (#58498)
- embedded kspread object displayed with wrong size (#33233)
- KPresenter hangs when inserted text wraps to newline
  (#56946)
- layer lowering is incorrect (#53277)
- resize handles deceptive when zoomed out (#61602)
- fixed painting garbage at a side of the screen in the presentation mode (on
  weird DPIs)

Changes after KPresenter 1.3 beta 2
===================================
Fixes:
- KPR 'forgets' solid line attribute of text frames (#61343)
- fix pasting text objects screwing UTF-8 text
- snap to Grid function aligns relatively, not absolutely (#56181)
- when cutting&pasting a vertically centred text frame,
  the vertical position changes (#61330)

Changes: